<resources>
    <string name="app_name">MyApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="overview">概览</string>
    <string name="apps">应用</string>
    <string name="message">消息</string>

    <string name="app_detail">应用详情</string>
    <string name="app_widgets">小组件</string>
    <string name="app_dirs">应用目录</string>
    <string name="app_permissions">应用权限</string>

    <string name="home">home</string>

    <string name="github_link">Github Link</string>

    <string name="no_results">暂无结果</string>


    <string name="action_startup">启动</string>
    <string name="action_uninstall">卸载</string>
    <string name="action_detail">详情</string>
    <string name="action_backup">备份</string>
    <string name="action_share">分享</string>

    <string name="action_sort_order_title">名称</string>
    <string name="action_sort_order_size">大小</string>
    <string name="action_sort_order_install_time">安装时间</string>
    <string name="action_sort_order_update_time">更新时间</string>
    <string name="action_sort_order_used_time">使用时间</string>

</resources>